--- a/examples/site/widgets/lateload.html
+++ b/examples/site/widgets/lateload.html
@@ -10,12 +10,147 @@ widget_selected: selected
     <div class="wrapper">
       <h1> {{page.title}} </h1>
     </div>
-    <div class="description_wrapper">
-      <h2> Description </h2>
-
-      <div class='description'>
-        <p>Coming Soon</p>
+    <div id="late_load" class="description_wrapper">
+    <div>
+      <h3>Attributes</h3>
+      <div>
+        The late load widget prevents DOM objects from loading until requested by the user.
       </div>
+      <div>
+        For best results open your inspector and watch the network requests from the appropriate tab.
+      </div>
+      <ul class="attributes">
+        <li>data-ur-ll-src="some_src" :: used as a replacement for src tags</li>
+        <li>data-ur-ll-href="some_href" :: used as a replacement for href tags</li>
+        <li>data-ur-ll-event="group_name" :: used to define a custom group that can be loaded later</li>
+      </ul>
+      <div>
+
+      <h3>Standard Event Groups</h3>
+      <div>
+        There are 4 standard groups that are predefined to handle common events for you, If any group uses these names its event handeling and functionality is taken care of within the late load widget. Any other group name is saved
+        in the <b>Ur.Widgets.late_load.components["your_group"]</b>.
+      </div>
+      <ul class="attributes">
+        <li>click</li>
+        <li>touch</li>
+        <li>DOMContentLoaded</li>
+        <li>load</li>
+        <li>scroll</li>
+      </ul>
+
+      </div>
+
+      <span class="note">NOTE: some images will not display until the page is scrolled, if this is an issue, please add the plutonium widget "auto_scroll.js"</span>
+      <br><br>
+    </div>
+
+    <div class="demo">
+      <div>
+        <h2>click/touch</h2>
+        <img data-ur-ll-event="click" data-ur-ll-src='../images/sample1.png' />
+      </div>
+      <div>
+        <h2>DOMContentLoaded</h2>
+        <img data-ur-ll-event="DOMContentLoaded" data-ur-ll-src='../images/sample1.png' />
+      </div>
+      <div>
+        <h2>load</h2>
+        <img data-ur-ll-event="load" data-ur-ll-src='../images/sample1.png' />
+      </div>
+      <div>
+        <h2>scroll</h2>
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample1.png' />
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="selectdemo">
+      <h2>load one item</h2>
+      <i>loads on mouseover</i><br>
+      <img data-ur-ll-event="custom_name" class="custom" data-ur-ll-src='../images/sample2.png' />
+      <script>
+        x$(".custom").on("mouseover", function () {
+          Ur.Widgets.late_load.release_element(this);
+          console.log(this)
+        });
+      </script>
+    </div>
+
+
+    <div class="selectdemo">
+      <h2>load by group</h2>
+
+      to demonstrate loading groups rather than an indevidual item, select a number from the list to see it load.<br>
+      <select class="selectgroup">
+        <option>select load group</option>
+        <option>one</option>
+        <option>two</option>
+        <option>three</option>
+      </select>
+      <script>
+        x$(".selectgroup").on("change", function (e) {
+          var name = e.currentTarget.children[e.currentTarget.selectedIndex].value;
+          var group = Ur.Widgets.late_load.components[name]
+          Ur.Widgets.late_load.release_group(group);
+          console.log(e,this)
+        });
+      </script>
+      <div class="group1">
+        <h2>group 1</h2>
+        <div>
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample1.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample2.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample3.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample4.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample5.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample6.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample7.png' />
+          <img data-ur-ll-event="one" data-ur-ll-src='../images/sample8.png' />
+        </div>
+      </div>
+      <div class="group2">
+        <h2>group 2</h2>
+        <div>
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample1.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample2.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample3.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample4.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample5.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample6.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample7.png' />
+          <img data-ur-ll-event="two" data-ur-ll-src='../images/sample8.png' />
+        </div> 
+      </div>
+      <div class="group3">
+        <h2>group 3</h2>
+        <div>
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample1.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample2.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample3.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample4.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample5.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample6.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample7.png' />
+          <img data-ur-ll-event="three" data-ur-ll-src='../images/sample8.png' />
+        </div> 
+      </div>
+    </div>
+    <div class="scroll">
+      <h2>scroll</h2>
+      <div>
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample1.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample2.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample3.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample4.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample5.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample6.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample7.png' />
+        <img data-ur-ll-event="scroll" data-ur-ll-src='../images/sample8.png' />
+      </div> 
+    </div>  
+
+
     </div> <!-- wrapper -->
 
   </div> <!-- basicpage -->
