minor doc update

--- a/examples/site/widgets/carousel.html
+++ b/examples/site/widgets/carousel.html
@@ -69,7 +69,8 @@ widget_selected: selected
                       <li>optional: <span class="inline_code">data-ur-autoscroll-delay</span>: integer (autoscroll delay in seconds)</li>
                       <li>optional: <span class="inline_code">data-ur-autoscroll-dir</span>: next/prev (specify autoscroll direction)</li>
                       <li>optional: <span class="inline_code">data-ur-android3d</span>: enabled/disabled (specify translate3d use on Android 1.6-2.3)</li>
-                      <li>optional: <span class="inline_code">data-ur-fill</span>: enabled/disabled (force carousel items to stretch to container width)</li>
+                      <li>optional: <span class="inline_code">data-ur-fill (&beta;)</span>: integer (force n carousel items to fit in container width)</li>
+                      <li>optional: <span class="inline_code">data-ur-center (&beta;)</span>: enabled/disabled (horizontally align current item)</li>
                     </ul>
                   </li>
                 </ul>
