--- a/examples/site/widgets/carousel.html
+++ b/examples/site/widgets/carousel.html
@@ -4,6 +4,79 @@ title: Carousel
 name: carousel
 widget_selected: selected
 ---
+<script>
+var carouselHtml;
+x$(document).on("DOMContentLoaded", function() {
+  carouselHtml = x$("#carousel_widget")[0].innerHTML;
+});
+
+describe("A plain carousel", function() {
+  beforeEach(function() {
+    x$("#carousel_widget").html(carouselHtml);
+    Ur.setup("#carousel_widget");
+  });
+  it("slides to the left by 1 item", function() {
+    runs(function() {
+      setTimeout(function() {
+        Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='3.png']"));
+      }, 0);
+    });
+    waitsFor(function() {
+      return !Ur.Widgets.carousel.MyFirstCarousel.flag.increment && /\(-250/.test(x$("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='scroll_container']").attr("style")[0]);
+    }, "carousel scroll right", 1000);
+    runs(function() {
+      expect(Ur.Widgets.carousel.MyFirstCarousel.itemIndex).toBe(1);
+    });
+  });
+  it("slides to the left by 1 item and then right by 1 item", function() {
+    var dragged = false;
+    runs(function() {
+      Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='3.png']"));
+      setTimeout(function() {
+        Syn.drag("+50 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='3.png']"), function() {dragged = true;});
+      }, 1200);
+    });
+    waitsFor(function() {
+      return dragged && !Ur.Widgets.carousel.MyFirstCarousel.flag.increment && /\(0/.test(x$("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='scroll_container']").attr("style")[0]);
+    }, "carousel scroll left", 2000);
+    runs(function() {
+      expect(Ur.Widgets.carousel.MyFirstCarousel.itemIndex).toBe(0);
+    });
+  });
+  it("slides back if it slid to the left when already at the very left", function() {
+    var dragged = false;
+    runs(function() {
+      Syn.drag("+50 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='3.png']"), function() {dragged = true;});
+    });
+    waitsFor(function() {
+      return dragged && !Ur.Widgets.carousel.MyFirstCarousel.flag.increment && /\(0/.test(x$("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='scroll_container']").attr("style")[0]);
+    }, "carousel scroll right", 1000);
+    runs(function() {
+      expect(Ur.Widgets.carousel.MyFirstCarousel.itemIndex).toBe(0);
+    });
+  });
+  it("can slide to the very right", function() {
+    runs(function() {
+      Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='2.png']"));
+      setTimeout(function() {
+        Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='3.png']"));
+      }, 1200);
+      setTimeout(function() {
+        Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='4.png']"));
+      }, 2400);
+      setTimeout(function() {
+        Syn.drag("-100 +0", $("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='item'][src$='5.png']"));
+      }, 3600);
+    });
+    waitsFor(function() {
+      return !Ur.Widgets.carousel.MyFirstCarousel.flag.increment && /\(-1000/.test(x$("[data-ur-id='MyFirstCarousel'] [data-ur-carousel-component='scroll_container']").attr("style")[0]);
+    }, "carousel scroll", 7000);
+    runs(function() {
+      expect(Ur.Widgets.carousel.MyFirstCarousel.itemIndex).toBe(4);
+    });
+  });
+});
+</script>
 <div data-ur-set="tabs">
   <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
 
@@ -172,9 +245,6 @@ widget_selected: selected
                 <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
                 <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
                 <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-                <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-                <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-                <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
               </div>
             </div>
           </div>
