add zoom widget documentation

--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -47,7 +47,7 @@ widget_selected: selected
     <ul>
       <li> <a href="{{site.url}}widgets/maps.html"> Map </a></li>
       <li> <a href="{{site.url}}widgets/swipe_toggle.html"> Swipe Toggle</a></li>
-      <li> <a href="{{site.url}}widgets/zoom_preview.html"> Zoom Preview </a> :: <a href="{{site.url}}widgets/zoom_preview_deprecated.html"> Deprecated Version </a></li>
+      <li> <a href="{{site.url}}widgets/zoom.html"> Zoom </a> :: <a href="{{site.url}}widgets/zoom_preview_deprecated.html"> Deprecated Version </a></li>
       <li> <a href="{{site.url}}widgets/font_resizer.html"> Font Resizer </a> </li>
       <li> <a href="{{site.url}}widgets/lateload.html"> Lateload </a></li>
       <li> <a href="{{site.url}}widgets/select_buttons.html"> Select Buttons </a></li>
